--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Il mio Viaggio a Londra</title>
     </head>
     <body>
         <!-- header -->
         <header>
-
+            <h1>Il mio Viaggio a Londra</h1>
+            <!-- composizione fotografica -->
+            <div>
+                <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="foto 01 Londra">
+                <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto 02 Londra">
+                <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto 03 Londra">
+            </div>
+            <hr>
         </header>
         <!-- main -->
         <main>
@@ -17,7 +24,7 @@
         </main>
         <!-- footer -->
         <footer>
-            
+
         </footer>
     </body>
 </html>
