table expenses completed

--- a/index.html
+++ b/index.html
@@ -16,11 +16,79 @@
                 <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto 02 Londra">
                 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto 03 Londra">
             </div>
-            <hr>
         </header>
+        <hr>
         <!-- main -->
         <main>
-
+            <!-- sezione spese -->
+            <div>
+                <h2>Le mie spese</h2>
+                <!-- tabella delle spese -->
+                <table>
+                    <!-- table header -->
+                    <thead>
+                        <tr>
+                            <th>
+                                Numero
+                            </th>
+                            <th>
+                                Descrizione
+                            </th>
+                            <th>
+                                Costo
+                            </th>
+                        </tr>
+                    </thead>
+                    <!-- table body -->
+                    <tbody>
+                        <tr>
+                            <td>
+                                1
+                            </td>
+                            <td>
+                                Biglietto Aereo
+                            </td>
+                            <td>
+                                120&euro;
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                1
+                            </td>
+                            <td>
+                                Biglietto Aereo
+                            </td>
+                            <td>
+                                120&euro;
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                1
+                            </td>
+                            <td>
+                                Biglietto Aereo
+                            </td>
+                            <td>
+                                120&euro;
+                            </td>
+                        </tr>
+                    </tbody>
+                    <!-- table footer -->
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">
+                                Totale
+                            </td>
+                            <td>
+                                360&euro;
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <hr>
         </main>
         <!-- footer -->
         <footer>
