section - to do list

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
                 </table>
             </div>
             <hr>
+            <!-- cose da fare -->
+            <div>
+                <h2>Cose da fare</h2>
+                <!-- lista delle cose da fare -->
+                <ul>
+                    <li>Visitare la Tower of London &cross;</li>
+                    <li>Visitare greenwich &check;</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+                </ul>
+            </div>
+            <hr>
         </main>
         <!-- footer -->
         <footer>
