--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </table>
             </div>
             <hr>
-            <!-- cose da fare -->
+            <!-- sezione cose da fare -->
             <div>
                 <h2>Cose da fare</h2>
                 <!-- lista delle cose da fare -->
@@ -99,6 +99,52 @@
                     <li>Ascoltare un artista di strada a Covent Garden &check;</li>
                     <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
                 </ul>
+            </div>
+            <hr>
+            <!-- sezione info utili -->
+            <div>
+                <h2>Info utili:</h2>
+                <ol>
+                    <li>
+                        Numeri utili di emergenza
+                        <!-- lista numeri utili -->
+                        <ul>
+                            <li>
+                                <strong>999</strong> - Emergenza
+                            </li>
+                            <li>
+                                <strong>101</strong> - Numero polizia
+                            </li>
+                            <li>
+                                <strong>111</strong> - Numero assistenza medica
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Hotel
+                        <!-- lista info Hotel -->
+                        <ul>
+                            <li>
+                                <strong>Nome hotel</strong>: Buckingham Palace
+                            </li>
+                            <li>
+                                <strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Aereo
+                        <!-- lista info voli -->
+                        <ul>
+                            <li>
+                                <strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa
+                            </li>
+                            <li>
+                                <strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow
+                            </li>
+                        </ul>
+                    </li>
+                </ol>
             </div>
             <hr>
         </main>
