footer completed - exercise done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <!-- header -->
         <header>
-            <h1>Il mio Viaggio a Londra</h1>
-            <!-- composizione fotografica -->
             <div>
+                <h1>Il mio Viaggio a Londra</h1>
+                <!-- composizione fotografica -->    
                 <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="foto 01 Londra">
                 <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto 02 Londra">
                 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto 03 Londra">
@@ -150,7 +150,12 @@
         </main>
         <!-- footer -->
         <footer>
-
+            <div>
+                <h2>Le foto</h2>
+                <!-- immagini londra -->
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto tamigi">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="foto tower bridge">
+            </div>
         </footer>
     </body>
 </html>
